--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
             android:id="@+id/sonar_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sonar" />
+            android:text="Estimation de distance" />
 
         <!--        <Button-->
         <!--            android:id="@+id/test_vllm"-->
